# bootimg

./: CMakeLists.txt  README.md  libbootimg.c  main.c
mincrypt/: CMakeLists.txt
